<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:orientation ="vertical">

    <TextView
        android:id="@+id/tvPuzzleteam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="PUZZLETEAM"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:layout_margin="30dp"

        android:fontFamily="@font/lilita_one"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="117dp"
            android:layout_height="117dp"
            android:layout_gravity="center"
            android:src="@mipmap/puzz" />
        <Button
            android:id="@+id/btnplay"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="509dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/Juegobtn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/purple_700"
            android:text="@string/play"
            android:textSize="22sp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/Rankingbtn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/purple_700"
            android:text="@string/ranking"
            android:textSize="22sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Ayudabtn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/purple_700"
            android:text="@string/help"
            android:textSize="22sp"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/JuegoFromPhotobtn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/purple_700"
            android:text="@string/photo"
            android:textSize="22sp"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Galeriabtn"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@color/purple_700"
            android:text="@string/gallery"
            android:textSize="22sp"
            app:cornerRadius="16dp" />

    </LinearLayout>


</LinearLayout>